--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>rt</artifactId>
             <version>1.8.0_202</version>
         </dependency>
+        <dependency> 
+            <groupId>org.futurepages.deps</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.0-5.5.23</version>
+        </dependency>
         <!-- TERMINA NOT FOUND -->
 
         <!-- COMEÇA SOLTOS -->
@@ -153,11 +158,6 @@
             <groupId>antlr</groupId>
             <artifactId>antlr</artifactId>
             <version>2.7.6</version>
-        </dependency>
-        <dependency>
-            <groupId>tomcat</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.0-5.5.23</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.external</groupId>
