--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ out/**
 *.iml
 target/
 
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
